add book lending feature
